incluir nucleo en los filtros de la API
